--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
     "test:e2e-gui": "vue-cli-service test:e2e --mode development"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moxios": "^0.4.0",
+    "sinon": "^9.2.4",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -25,7 +28,7 @@
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "cypress": "^6.3.0",
     "eslint": "^6.7.2",
